--- a/itemDetail.html
+++ b/itemDetail.html
@@ -17,25 +17,26 @@
 <body>
   
     <!--Header-->
-    <div class="bg-dark header"> 
-        <header class="container">
-        <nav class="navbar row" data-bs-theme="dark">
-            <div class="container">
-            <a class="navbar-brand" href="./home.html">
-                <img src="./img/logo.png" alt="Logo" class="logo">
-            </a>
-            <div class="d-flex alter">
-                <div class="container-cart">
-                <button class="btn cart"><i class="bi bi-handbag icon"></i></button>
-                <div class="count" id="count">0</div>
-                </div>
-                <a class="exit" href="./index.html"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
+  <div class="bg-dark header"> 
+    <header class="container">
+      <nav class="navbar row" data-bs-theme="dark">
+        <div class="container">
+          <a class="navbar-brand" href="./home.html">
+            <img src="./img/logo.png" alt="Logo" class="logo">
+          </a>
+          <div class="d-flex alter">
+            <input type="search" placeholder="Buscar Producto" aria-label="Search" id="productSearch" autocomplete="off" disabled>
+            <div class="container-cart">
+              <button class="btn cart"><i class="bi bi-handbag icon"></i></button>
+              <div class="count" id="count">0</div>
             </div>
-            </div>
-        </nav>
-        </header>
-    </div>
-    <!-- / Header-->
+            <a class="exit" href="./index.html"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+  </div>
+  <!-- / Header-->
 
     <!--Body-->
     <div class="container content" id="item">
@@ -44,9 +45,9 @@
     <!-- / Body-->
 
     <!--Footer-->
-    <div class="border-top bg-dark fixed-bottom" data-bs-theme="dark" id="footer">
+    <footer class="border-top bg-dark fixed-bottom" data-bs-theme="dark" id="footer">
         <div class="container">
-        <footer class="d-flex justify-content-between align-items-center py-3 px-2">
+        <div class="d-flex justify-content-between align-items-center py-3 px-2">
             <div class="col-md-4 d-flex align-items-center">
             <a href="/home.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <img src="./img/logo.png" alt="Logo" class="logo">
@@ -59,9 +60,9 @@
             <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a></li>
             <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a></li>
             </ul>
-        </footer>
         </div>
-    </div>
+        </div>
+    </footer>
     <!-- / Footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
