--- a/itemDetail.html
+++ b/itemDetail.html
@@ -45,20 +45,20 @@
     <!-- / Body-->
 
     <!--Footer-->
-    <footer class="border-top bg-dark fixed-bottom" data-bs-theme="dark" id="footer">
+    <footer class="border-top bg-dark fixed-bottom d-flex align-items-center" data-bs-theme="dark" id="footer">
         <div class="container">
-        <div class="d-flex justify-content-between align-items-center py-3 px-2">
+        <div class="d-flex justify-content-between align-items-center">
             <div class="col-md-4 d-flex align-items-center">
-            <a href="/home.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <img src="./img/logo.png" alt="Logo" class="logo">
-            </a>
-            <span class="ms-3 text-muted">&copy; 2023 Tiendas JS.</span>
+              <a href="/home.html" class="me-2 text-muted text-decoration-none">
+                  <img src="./img/logo.png" alt="Logo" class="logo">
+              </a>
+              <span class="ms-3 text-muted">&copy; 2023 Tiendas JS.</span>
             </div>
 
             <ul class="nav col-md-4 justify-content-end list-unstyled">
-            <li class="ms-3"><a class="text-muted social" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a></li>
-            <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a></li>
+              <li class="ms-3"><a class="text-muted social" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a></li>
             </ul>
         </div>
         </div>
