--- a/itemDetail.html
+++ b/itemDetail.html
@@ -45,7 +45,7 @@
     <!-- / Body-->
 
     <!--Footer-->
-    <footer class="border-top bg-dark fixed-bottom d-flex align-items-center" data-bs-theme="dark" id="footer">
+    <footer class="border-top bg-dark d-flex align-items-center" data-bs-theme="dark" id="footer">
         <div class="container">
         <div class="d-flex justify-content-between align-items-center">
             <div class="col-md-4 d-flex align-items-center">
