--- a/cart.html
+++ b/cart.html
@@ -10,9 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/home.css" />
+  <link rel="stylesheet" href="./css/cart.css" />
   <title>Tiendas Js</title>
 </head>
 
@@ -27,10 +26,10 @@
             <img src="./img/logo.png" alt="Logo" class="logo">
           </a>
           <div class="d-flex alter">
-            <input type="search" placeholder="Buscar Producto" aria-label="Search" id="productSearch" autocomplete="off">
+            <input type="search" placeholder="Buscar Producto" aria-label="Search" id="productSearch" autocomplete="off" disabled>
             <div class="container-cart">
-              <a class="btn cart" id="cart"><i class="bi bi-handbag icon"></i></a>
-              <div class="count" id="count" hidden>0</div>
+              <button class="btn cart"><i class="bi bi-handbag icon"></i></button>
+              <div class="count" id="count">0</div>
             </div>
             <a class="exit" href="./index.html"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
           </div>
@@ -41,12 +40,22 @@
   <!-- / Header-->
 
   <!--Body-->
-  <main class="container my-3">
-    <div class="row g-2 d-flex" id="list">
-      <!--Productos Dinamicos-->
-    </div>
-  </main>
-  <!-- / Body-->
+  <main class="container my-3 card">
+        <div class="g-2 m-2">
+            <div class="items" id="cartList">
+              <!--Contenido Carrito-->
+            </div>
+        </div>
+        <div class="total">
+          <div class="totalContainer">
+            <button type="button" class="btn back" id="back">Seguir Comprando</button>
+            <button type="button" class="btn clear" id="clear">Vaciar Carrito</button>
+          </div>
+          <h4 id="total"></h4>
+        </div>
+        <button type="button" class="btn finish" id="finish">Finalizar Compra</button>
+</main>
+<!-- / Body-->
 
   <!--Footer-->
   <div class="border-top bg-dark" data-bs-theme="dark" id="footer">
@@ -68,13 +77,12 @@
     </div>
   </div>
   <!-- / Footer-->
-
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
-  <script src="./js/home.js"></script>
+  <script src="./js/cart.js"></script>
 </body>
 </html>
