--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css" />
     <title>Tiendas JS</title>
 </head>
 
-<body>
-    <div class="loginContainer">
+<body data-aos="fade-right">
+    <main class="loginContainer">
             <img src="img/logo.png" class="logo" alt="Logo">
             <h1>Inicio de Sesión</h1>
             <form id="loginForm" autocomplete="off">
@@ -26,8 +27,13 @@
                 <p id="message"></p>
                 <p class="register">¿No tiene cuenta? <a href="./register.html">Registrese</a></p>
             </form>
-    </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="./js/index.js"></script>
 </body>
 </html>
