--- a/itemDetail.html
+++ b/itemDetail.html
@@ -10,11 +10,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/itemDetail.css" />
   <title>Tiendas Js</title>
 </head>
 
-<body>
+<body data-aos="fade-right">
   
     <!--Header-->
   <div class="bg-dark header"> 
@@ -27,8 +29,8 @@
           <div class="d-flex alter">
             <input type="search" placeholder="Buscar Producto" aria-label="Search" id="productSearch" autocomplete="off" disabled>
             <div class="container-cart">
-              <button class="btn cart"><i class="bi bi-handbag icon"></i></button>
-              <div class="count" id="count">0</div>
+              <a class="btn cart" id="cart"><i class="bi bi-handbag icon"></i></a>
+              <div class="count" id="count" hidden>0</div>
             </div>
             <a class="exit" href="./index.html"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
           </div>
@@ -39,9 +41,8 @@
   <!-- / Header-->
 
     <!--Body-->
-    <div class="container content" id="item">
-        
-    </div>
+    <main class="container content my-3" id="item">        
+    </main>
     <!-- / Body-->
 
     <!--Footer-->
@@ -64,8 +65,12 @@
         </div>
     </footer>
     <!-- / Footer-->
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="./js/itemDetail.js"></script>
 </body>
 </html>
