--- a/register.html
+++ b/register.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/register.css" />
     <title>Tiendas JS</title>
 </head>
-<body>
-    <div class="logonContainer">
+<body data-aos="fade-left">
+    <main class="logonContainer">
             <img src="img/logo.png" class="logo" alt="Logo">
             <h1>Registro</h1>
             <form id="registerForm" autocomplete="off">
@@ -31,8 +33,14 @@
                 <p id="message"></p>
                 <p class="register">¿Ya tiene cuenta? <a href="./index.html">Iniciar sesión</a></p>
             </form>
-    </div>
+    </main>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="./js/register.js"></script>
 </body>
 </html>
