--- a/cart.html
+++ b/cart.html
@@ -29,9 +29,9 @@
             <input type="search" placeholder="Buscar Producto" aria-label="Search" id="productSearch" autocomplete="off" disabled>
             <div class="container-cart">
               <button class="btn cart"><i class="bi bi-handbag icon"></i></button>
-              <div class="count" id="count">0</div>
+              <div class="count" id="count" hidden></div>
             </div>
-            <a class="exit" href="./index.html"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
+            <a class="exit" href="./index.html" id="exit"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
           </div>
         </div>
       </nav>
