--- a/home.html
+++ b/home.html
@@ -30,9 +30,9 @@
             <input type="search" placeholder="Buscar Producto" aria-label="Search" id="productSearch" autocomplete="off">
             <div class="container-cart">
               <a class="btn cart" id="cart"><i class="bi bi-handbag icon"></i></a>
-              <div class="count" id="count" hidden>0</div>
+              <div class="count" id="count" hidden></div>
             </div>
-            <a class="exit" href="./index.html"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
+            <a class="exit" href="./index.html" id="exit"><i class="bi bi-box-arrow-right exit-icon"></i> Salir</a>
           </div>
         </div>
       </nav>
@@ -70,6 +70,7 @@
   <!-- / Footer-->
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
